[workspace]
resolver = "2"
members = [
  "Schubert",
  "Mozart",
  "Amadeus",
  "Salieri",
  "Vivaldi"
]

[workspace.dependencies]
anyhow              = "^1"
async-recursion     = "^1"
once_cell           = "^1.18"
serde               = "^1"

[workspace.dependencies.tokio]
features  = ["rt-multi-thread", "signal", "parking_lot", "macros", "fs", "sync"]
version   = "^1.28.2"
workspace = true

[profile.release]
opt-level           = 3
overflow-checks     = false
debug-assertions    = false
lto                 = "thin"

[profile.fat-release]
inherits          = "release"
debug             = false
debug-assertions  = false
overflow-checks   = false
lto               = "fat"
