[workspace]
resolver = "2"
members = [
  "Strauss",
  "Amadeus",
  "Salieri"
]

[workspace.dependencies]
anyhow              = "^1"
async-recursion     = "^1"
once_cell           = "^1.19"
serde               = "^1"

[workspace.dependencies.chat]
git = "https://github.com/Miezhiko/chat.rs.git"
branch = "mawa"

[workspace.dependencies.chat-utils]
git = "https://github.com/Miezhiko/chat.rs.git"
branch = "mawa"

[workspace.dependencies.tokio]
features  = ["rt-multi-thread", "signal", "parking_lot", "macros", "fs", "sync"]
version   = "^1.36.0"
workspace = true

[profile.release]
opt-level           = 3
overflow-checks     = false
debug-assertions    = false
lto                 = "thin"

[profile.fat-release]
inherits          = "release"
debug             = false
debug-assertions  = false
overflow-checks   = false
lto               = "fat"
