[package]
name                = "amadeus"
version             = "11.0.5"
authors             = [ "Miezhiko" ]
repository          = "https://github.com/Miezhiko/Amadeus"
readme              = "README.md"
keywords            = [ "discord", "bot" ]
edition             = "2021"
description         = "memory storage and artificial intelligence system"
license             = "AGPL-3.0-only"
rust-version        = "1.63.0"

[features]
default             = ["trackers"]
trackers            = []
spam_filter         = []
flo                 = ["tonic", "hex", "flo-grpc"]
full                = ["flo", "trackers"]
ggru                = []

[dependencies]
schubert            = { path = "../Schubert" }
strauss             = { path = "../Strauss" }
tokio               = { workspace = true }
serde               = { workspace = true }
once_cell           = { workspace = true }
anyhow              = { workspace = true }
async-recursion     = { workspace = true }
chrono              = "0.4.26"
glob                = "0.3.1"
chrono-tz           = "0.8.2"
tracing             = "0.1.37"
tracing-log         = "0.1.3"
tracing-subscriber  = "0.3.17"
regex               = "1.8.4"
serde_derive        = "1.0.164"
serde_json          = "1.0.96"
serde_yaml          = "0.9.21"
comfy-table         = "7.0.0"
async-std           = "1.12"
futures-util        = "0.3.28"
qrcode              = "0.12"
cannyls             = "0.10"
bincode             = "2.0.0-rc.3"
itertools           = "0.11.0"
unic-langid         = "0.9.1"
fluent-templates    = "0.8"
sled                = "0.34.7"
kathoey             = "1.1.4"
serde_dhall         = "0.12.1"
nipper              = "0.1.9"
plotters            = "0.3.4"
celery              = "^0.5"

cynic   = { version = "3.2.0",        features = ["http-reqwest"] }
rand    = { version = "0.8.5",        features = ["std", "std_rng"] }
reqwest = { version = "0.11.18",      features = ["json", "blocking"] }
ical    = { version = "0.8",          features = ["ical"] }
markov  = { version = "1.1",          features = ["yaml"] }

[dependencies.stroke]
git = "https://github.com/dorianprill/stroke.git"
branch = "main"

[dependencies.songbird]
default-features = false
git = "https://github.com/Masha/songbird.git"
branch = "next"
features = [ "serenity"
           , "driver"
           , "native"
           , "gateway"
           ]

[dependencies.serenity]
default-features = false
git = "https://github.com/Masha/serenity"
branch = "next"
features = [ "cache"
           , "builder"
           , "model"
           , "framework"
           , "standard_framework"
           , "voice"
           , "client"
           , "http"
           , "native_tls_backend"
           , "utils"
           , "collector"
           , "unstable_discord_api"
           , "chrono"
           , "gateway"
           , "tokio_task_builder"
           ]

[dependencies.hex]
version = "0.4.3"
optional = true

# follow version on flo
# https://github.com/w3champions/flo/blob/develop/crates/client/Cargo.toml
[dependencies.tonic]
version = "0.6"
optional = true

[dependencies.flo-grpc]
git = "https://github.com/w3champions/flo-grpc.git"
branch = "main"
optional = true
