[package]
name                = "amadeus"
version             = "14.0.2"
authors             = [ "Miezhiko" ]
repository          = "https://github.com/Miezhiko/Amadeus"
readme              = "README.md"
keywords            = [ "discord", "bot" ]
edition             = "2021"
description         = "memory storage and artificial intelligence system"
license             = "AGPL-3.0"
rust-version        = "1.63.0"

[features]
default             = ["trackers"]
trackers            = []
spam_filter         = []
flo                 = ["tonic", "hex", "flo-grpc"]
flotv               = ["cynic"]
ggru                = []
naoko               = ["rdkafka"]
full                = ["flo", "flotv", "spam_filter", "trackers", "ggru"]

[dependencies]
strauss             = { path = "../Strauss" }
tokio               = { workspace = true }
serde               = { workspace = true }
once_cell           = { workspace = true }
anyhow              = { workspace = true }
async-recursion     = { workspace = true }
chat-utils          = { workspace = true }
chrono              = "0.4.34"
glob                = "0.3.1"
chrono-tz           = "0.8.5"
tracing             = "0.1.40"
tracing-log         = "0.2.0"
tracing-subscriber  = "0.3.18"
regex               = "1.10.2"
serde_derive        = "1.0.197"
serde_json          = "1.0.114"
serde_yaml          = "0.9.32"
comfy-table         = "7.1.0"
async-std           = "1.12"
futures-util        = "0.3.30"
qrcode              = "0.13"
bincode             = "2.0.0-rc.3"
itertools           = "0.12.0"
unic-langid         = "0.9.4"
fluent-templates    = "0.8"
sled                = "1.0.0-alpha.120"
kathoey             = "1.1.5"
serde_dhall         = "0.12.1"
nipper              = "0.1.9"
plotters            = "0.3.5"
celery              = "0.5"
libc                = "0.2"

rand    = { version = "0.8.5",        features = ["std", "std_rng"] }
reqwest = { version = "0.11.24",      features = ["json", "blocking"] }
ical    = { version = "0.10",         features = ["ical"] }
markov  = { version = "1.1",          features = ["yaml"] }

[dependencies.stroke]
git = "https://github.com/dorianprill/stroke.git"
branch = "main"

[dependencies.cannyls]
git = "https://github.com/Masha/cannyls.git"
branch = "mawa"

[dependencies.cynic]
default-features  = false
version           = "3.4.3"
features          = ["http-reqwest"]
optional          = true

[dependencies.symphonia]
version = "0.5.4"
features = ["all-formats"]

[dependencies.songbird]
default-features = false
# version  = "0.4"
# use this for yt search support
git = "https://github.com/serenity-rs/songbird.git"
branch = "current"
features = [ "serenity"
           , "driver"
           , "rustls"
           , "gateway"
           , "builtin-queue"
           ]

[dependencies.serenity]
default-features = false
version  = "0.12.1"
features = [ "cache"
           , "builder"
           , "model"
           , "framework"
           , "standard_framework"
           , "voice"
           , "client"
           , "http"
           , "rustls_backend"
           , "utils"
           , "collector"
           , "unstable_discord_api"
           , "chrono"
           , "gateway"
           , "tokio_task_builder"
           ]

[dependencies.hex]
version = "0.4.3"
optional = true

# follow version on flo
# https://github.com/w3champions/flo/blob/develop/crates/client/Cargo.toml
[dependencies.tonic]
version = "0.6"
optional = true

[dependencies.flo-grpc]
git = "https://github.com/w3champions/flo-grpc.git"
branch = "main"
optional = true

[dependencies.rdkafka]
version = "0.36.1"
features = ["dynamic-linking", "tokio"]
optional = true
