[package]
name = "mozart"
description = "Amadeus services library"
version = "0.3.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde           = { workspace = true }
anyhow          = { workspace = true }
once_cell       = { workspace = true }
async-recursion = { workspace = true }
celery          = { workspace = true }
log             = "0.4.17"
rand            = "0.8.5"
chrono          = "0.4.24"
bincode         = "2.0.0-rc.2"
regex           = "1.7"
tch             = "0.11.0"
ucd             = "0.1.1"

[dependencies.rust-bert]
default-features = false
git = "https://github.com/guillaume-be/rust-bert.git"
branch = "master"
features = [ "remote" ]

[dependencies.tokio]
features = ["rt-multi-thread", "signal", "parking_lot", "macros", "fs"]
workspace = true
