[package]
name = "mozart"
description = "Amadeus services library"
version = "0.3.4"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde           = { workspace = true }
anyhow          = { workspace = true }
once_cell       = { workspace = true }
async-recursion = { workspace = true }
celery          = { workspace = true }
tokio           = { workspace = true }
log             = "0.4.18"
rand            = "0.8.5"
chrono          = "0.4.24"
bincode         = "2.0.0-rc.3"
regex           = "1.8"
tch             = "0.13"
ucd             = "0.1.1"

[dependencies.rust-bert]
default-features = false
git = "https://github.com/guillaume-be/rust-bert.git"
branch = "master"
features = [ "remote", "download-libtorch" ]
