[package]
name = "salieri"
description = "Amadeus services consumer"
version = "0.4.0"
edition = "2021"

[dependencies]
mozart          = { path = "../Mozart" }
serde           = { workspace = true }
anyhow          = { workspace = true }
celery          = { workspace = true }
tokio           = { workspace = true }
env_logger      = "0.10"
log             = "0.4.17"
