[package]
name = "salieri"
description = "Amadeus services consumer"
version = "0.4.1"
edition = "2021"

[dependencies]
strauss         = { path = "../Strauss" }
serde           = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
env_logger      = "0.10"
log             = "0.4.19"
celery          = "^0.5"
