[package]
name = "salieri"
description = "Amadeus services consumer"
version = "0.4.2"
edition = "2021"

[dependencies]
strauss         = { path = "../Strauss" }
serde           = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
env_logger      = "0.11"
log             = "0.4.20"
celery          = "^0.5"
