[package]
name = "strauss"
description = "Amadeus services library"
version = "0.5.4"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde           = { workspace = true }
anyhow          = { workspace = true }
once_cell       = { workspace = true }
async-recursion = { workspace = true }
tokio           = { workspace = true }
chat            = { workspace = true }
chat-utils      = { workspace = true }
log             = "0.4.20"
rand            = "0.8.5"
chrono          = "0.4.31"
bincode         = "2.0.0-rc.3"
regex           = "1.10"
tch             = "0.13"
celery          = "^0.5"

[dependencies.rust-bert]
default-features = false
git = "https://github.com/guillaume-be/rust-bert.git"
branch = "master"
features = [ "remote", "download-libtorch" ]
