[package]
name = "vivaldi"
description = "Kalmarity services consumer"
version = "0.2.2"
edition = "2021"

[dependencies]
schubert        = { path = "../Schubert" }
wagner          = { path = "../Wagner" }
serde           = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
once_cell       = { workspace = true }
env_logger      = "0.10"
log             = "0.4.19"
futures         = "0.3"

[dependencies.rdkafka]
version = "0.32"
features = ["dynamic-linking", "tokio"]
