[package]
name = "vivaldi"
description = "Kalmarity services consumer"
version = "0.2.5"
edition = "2021"

[dependencies]
serde           = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
once_cell       = { workspace = true }
chat            = { workspace = true }
chat-utils      = { workspace = true }
env_logger      = "0.10"
log             = "0.4.20"
futures         = "0.3"

[dependencies.rdkafka]
version = "0.33.2"
features = ["dynamic-linking", "tokio"]
