[package]
name = "wagner"
description = "pythonic modules"
version = "0.2.1"
edition = "2021"

[dependencies]
schubert        = { path = "../Schubert" }
serde           = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
once_cell       = { workspace = true }
env_logger      = "0.10"
log             = "0.4.19"
futures         = "0.3"
inline-python   = "0.11"
